* unit test: Fix local variables, stop observers, correct css/html and fix Test.Unit.Logger#getMessageCell. [jddalton]

* unit test: Fix exiting test task on INT signal. [Samuel Lebeau]

* unit test: Fix unit test freeze in IE. [Tobie Langel]

* unit test: Instanciate Test.Unit.Logger on window load. [Tobie Langel]

* unit test: Remove usage of the 'with' statement from unit tests. [Tobie Langel]

* unit test: Clean-up. [Tobie Langel]

* unit test: Stop form observers in unit tests. Closes #10938. [kangax]

* deprecation extension: Complete rewrite of the deprecation helper, now renamed UpdateHelper and useable by third-party libs. [Tobie Langel]

* deprecation extension: Mark Hash.toJSON() as removed. [Tobie Langel]

* deprecation extension: Mark Class.create() used without arguments as deprecated. [Tobie Langel]

* deprecation extension: Mark Event.unloadCache as removed rather than deprecated. [Tobie Langel]

* deprecation extension: Log everything *but* deprecations with console.error. [Tobie Langel]

* deprecation extension: Use Firebug's console.warn and console.error. [Andrew Dupont, Tobie Langel]

* deprecation extension: Add deprecation extension. [Tobie Langel]

*1.6.0.2* (January 25, 2008)

* Update the list of officially supported browsers in the README.  [sam]

* Add tests for Element#descendantOf that deal with dynamically-created elements. [Andrew Dupont]

* Ensure positionedOffset properly considers "position: fixed" elements. Also ensures IE reports offsets correctly by triggering hasLayout when a "static" element has a "fixed" element as an offset parent. Closes #10644. [heygrady, kangax, Andrew Dupont]

* Roll back the fix for #9609, since it does not work in Opera. Instead, avoid using "valueOf" or "toString" as field names in forms.

* Prevent DOM node expandos _countedByPrototype and _prototypeEventID from being serialized into (inner|outer)HTML in IE. Closes #10909. [dcpedit, Tobie Langel, Andrew Dupont]
