@@ -1,3 +1,5 @@
+* Make Element#absolutize and Element#relativize always return element. Closes #10983. [kangax]
+
 * unit test: Fix local variables, stop observers, correct css/html and fix Test.Unit.Logger#getMessageCell. [jddalton]
 
 * unit test: Fix exiting test task on INT signal. [Samuel Lebeau]
